--- a/kontakt.html
+++ b/kontakt.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Moj portfolio</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">		
-		<link href="http://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
-		<link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.5.0/css/all.css">
+		<link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 		<link rel="stylesheet" href="lightbox/css/lightbox.css">
 		<link rel="stylesheet" href="socicon/style.css">
 		<link rel="stylesheet" href="style.css">
